@@ -9,11 +9,23 @@ $_lang['console_source_result'] = 'Source result';
 $_lang['console_save'] = 'Save';
 $_lang['console_load'] = 'Load';
 $_lang['console_select_file'] = 'Select a file';
-$_lang['console_file_name'] = 'File name';
+$_lang['console_file'] = 'File';
+$_lang['console_snippet'] = 'Snippet';
+$_lang['console_select_snippet'] = 'Select a snippet';
 $_lang['console_close'] = 'Close';
 $_lang['console_load'] = 'Load';
+$_lang['console_enter_file_name'] = 'Enter file name without extension';
+$_lang['console_save_to_file'] = 'Save to file';
+$_lang['console_save_snippet'] = 'Save to snippet';
+$_lang['console_overwrite_snippet'] = 'Overwrite a snippet if exists';
+$_lang['console_load_from_file'] = 'Load from file';
+$_lang['console_load_from_snippet'] = 'Load from snippet';
+$_lang['console_clear'] = 'Clear';
 
 $_lang['console_err_path_nf'] = 'The path is not found!';
 $_lang['console_err_file_nf'] = 'The file does not exist!';
 $_lang['console_err_files_nf'] = 'Did not find any files!';
 $_lang['console_err_file_ns'] = 'File is not specified!';
+$_lang['console_err_snippet_ns'] = 'No snippet specified!';
+$_lang['console_err_snippet_nf'] = 'Snippet not found!';
+$_lang['console_err_snippet_ae'] = 'Snippet already exists!';
