@@ -9,11 +9,23 @@ $_lang['console_source_result'] = 'Исходный код';
 $_lang['console_save'] = 'Сохранить';
 $_lang['console_load'] = 'Загрузить';
 $_lang['console_select_file'] = 'Выберите файл';
-$_lang['console_file_name'] = 'Имя файла';
+$_lang['console_file'] = 'Файл';
+$_lang['console_snippet'] = 'Сниппет';
+$_lang['console_select_snippet'] = 'Выберите сниппет';
 $_lang['console_close'] = 'Закрыть';
 $_lang['console_load'] = 'Загрузить';
+$_lang['console_enter_file_name'] = 'Введите имя файла без расширения';
+$_lang['console_save_to_file'] = 'Сохранить в файл';
+$_lang['console_save_snippet'] = 'Сохранить в сниппет';
+$_lang['console_overwrite_snippet'] = 'Перезаписать сниппет, если существует';
+$_lang['console_load_from_file'] = 'Загрузить из файла';
+$_lang['console_load_from_snippet'] = 'Загрузить из сниппета';
+$_lang['console_clear'] = 'Очистить';
 
 $_lang['console_err_path_nf'] = 'Путь не найден!';
 $_lang['console_err_file_nf'] = 'Файл не найден!';
 $_lang['console_err_files_nf'] = 'Файлы не найдены!';
 $_lang['console_err_file_ns'] = 'Файл не выбран!';
+$_lang['console_err_snippet_ns'] = 'Сниппет не выбран!';
+$_lang['console_err_snippet_nf'] = 'Сниппет не найден!';
+$_lang['console_err_snippet_ae'] = 'Сниппет с таким именем уже существует!';
