@@ -1,4 +1,5 @@
 <?php
+
 class ConsoleGetFilesProcessor extends modProcessor{
     public function process() {
         $path = $this->modx->getOption('console_core_path', NULL, $this->modx->getOption('core_path') . 'components/console/').'files/';
@@ -6,7 +7,7 @@ class ConsoleGetFilesProcessor extends modProcessor{
         foreach(scandir($path) as $tmp) {
             if (strpos($tmp,'.php') !== false) $files[] = $tmp;
         };
-        return count($files) > 0 ? $this->success($files) : $this->failure($this->modx->lexicon('console_err_files_nf'));
+        return $this->success($files);
     }
 }
 
