@@ -1,6 +1,7 @@
 Console-2.1.0-beta
 =============================================================
-- Added the feature to save and load the console code.
+- Added a feature to save the console code to file and load from file.
+- Added a feature to save the console code to snippet and load from snippet.
 
 Console-2.0.3-beta
 =============================================================
